Set up template to receive injected data

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,6 +5,10 @@
         <title>ABOUT Page</title>
     </head>
     <body>
-        <h1>ABOUT Page</h1>
+        <h1>{{pageTitle}}</h1>
+        
+        <footer>
+            <p>Copyright {{currentYear}}</p>
+        </footer>
     </body>
 </html>
