--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Some Website</title>
+        <title>Home Page</title>
     </head>
     <body>
         <h1>{{pageTitle}}</h1>
-        <p>{{filler}}</p>
+        <p>{{welcomeMessage}}</p>
         <footer>
             <p>Copyright {{currentYear}}</p>
         </footer>
