--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Some Website</title>
-    </head>
-    <body>
+{{>header}}
         <h1>{{pageTitle}}</h1>
         <p>{{filler}}</p>
-        <footer>
-            <p>Copyright {{currentYear}}</p>
-        </footer>
-    </body>
-</html>
+{{>footer}}
