Add handlebars helper to server

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
         <footer>
-            <p>Copyright {{currentYear}}</p>
+            <p>Copyright {{getCurrentYear}}</p>
         </footer>
     </body>
 </html>
