--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,3 +7,5 @@
     <body>
         <h1>{{pageTitle}}</h1>
         <p><a href="/">Home</a></p>
+        <p><a href="/about">About</a></p>
+        
