--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,5 @@
 {{>header}}
 
-        <h1>{{pageTitle}}</h1>
-        <p>{{welcomeMessage}}</p>
+        <p>{{screamIt welcomeMessage}}</p>
 
 {{>footer}}
